--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,9 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+# FBSNapshot
+
+PyttTests/FailureDiffs?
+PyttTests/ReferenceImages
+
